--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <ul>
           <li><a href="https://github.com/quartzmo/beginner-ghpages/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/quartzmo/beginner-ghpages/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="" onclick="alert('boom')">Explode!</a></li>
           <li><a href="https://github.com/quartzmo/beginner-ghpages">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
