--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
   <script>
     function changecolor() {
-      document.body.style = "color: red;";
+      document.body.style = "color: blue;";
     }
   </script>
   <h1>Change Color Demo</h1>
