--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script>
     function changecolor() {
       document.body.style.color = "blue";
+      console.log(document.body);
     }
   </script>
   <h1>Change Color Demo</h1>
