--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
   <script>
     function changecolor() {
-      document.body.style.color = "blue";
+      document.body.style['background-color'] = "blue";
       console.log(document.body);
     }
   </script>
